# openGLTut

./: CMakeLists.txt  main.cpp
include/: Mesh.h  Shader.h  Window.h
src/: Mesh.cpp  Shader.cpp  Window.cpp
